examples/datalog/15_arithmetic/42_precedence_test.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_prec
Knowledge graph 'test_prec' created.
Switched to knowledge graph: test_prec
> .kg use test_prec
Switched to knowledge graph: test_prec
> +val[(5,)].
Inserted 1 fact(s) into 'val'.
> result(V, R) :- val(V), R = V + 3 * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "result", args: [Variable("V"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
